tests/custom-2.1.2/noncompliant/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: noncompliant-cm
  namespace: kyverno-aws
data:
  logging: |
    clusterLogging:
      - types:
          - api
        enabled: true
