tests/custom-2.1.2/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-2.1.2-noncompliant
policies:
  - ../../../kyverno-policies/custom-2.1.2.yaml
resources:
  - configmap.yaml
results:
  - policy: custom-2-1-2-ensure-audit-logs-collected
    rule: check-audit-log-collection
    resources:
      - noncompliant-cm
    kind: ConfigMap
    result: fail
